--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,11 @@ jobs:
           python generate_dinosaurs_schema.py
           python generate_markdown_pages.py
 
+      - name: Archive markdown files
+        uses: actions/upload-artifact@v4
+        with:
+          path: ./
+
       - run: pip install mkdocs-material 
 
       - run: mkdocs gh-deploy --force
