Update repository_dispatch event type in ci.yml to json_profiles_updated

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: ci
 
 on:
   repository_dispatch:
-    types: [trigger-workflow]
+    types: [json_profiles_updated]
   push:
     branches:
       - master 
