--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,65 @@
-site_name: Isla Nycta Unofficial Rules Reference
-site_url: https://yldales.github.io/isla-nycta
+site_name: Isla Nycta (Unofficial) Rules Reference
+site_url: https://yldales.github.io/isla-nycta-rules
+repo_url: https://github.com/yldales/isla-nycta-rules
+
 theme:
   name: material
+  font:
+    text: Nunito Sans
+  palette:
+    - media: "(prefers-color-scheme: light)"
+      scheme: default
+      toggle:
+        icon: material/brightness-7
+        name: Switch to dark mode
+    - media: "(prefers-color-scheme: dark)"
+      scheme: slate
+      toggle:
+        icon: material/brightness-4
+        name: Switch to light mode
+  features:
+    - navigation.footer
+    - navigation.indexes
+    - navigation.instant
+    - navigation.instant.progress
+    - navigation.tabs
+    # ...
+    - content.tooltips
+  # custom_dir: overrides
+
+plugins:
+  - search
+  - offline
+  - autolinks
+  - tags:
+      tags_file: tags.md
+  # Enable it again when finished.
+  # - git-revision-date-localized:
+  #     fallback_to_build_date: true
+
+markdown_extensions:
+  - admonition
+  # ...
+  - pymdownx.details
+  - pymdownx.superfences
+  - pymdownx.keys
+  - pymdownx.magiclink
+  # ...
+  - tables
+  # ...
+  - abbr
+  - attr_list
+  # - pymdownx.snippets:
+  #     auto_append:
+  #       - includes/abbreviations.md
+
+# extra_javascript:
+#   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
+#   - javascripts/discord_channels.js
+#   - javascripts/discord_emojis.js
+#   - javascripts/nycta.js
+#   - javascripts/pot.js
+#   - javascripts/tablesort.js
+
+# extra_css:
+#   - stylesheets/extra.css
