--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,6 +54,6 @@ jobs:
         with:
           path: ./
 
-      - run: pip install mkdocs-material 
+      - run: pip install mkdocs-material mkdocs-autolinks-plugin
 
       - run: mkdocs gh-deploy --force
