--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -53,13 +53,12 @@ markdown_extensions:
   #     auto_append:
   #       - includes/abbreviations.md
 
-# extra_javascript:
-#   - https://unpkg.com/tablesort@5.3.0/dist/tablesort.min.js
-#   - javascripts/discord_channels.js
-#   - javascripts/discord_emojis.js
+extra_javascript:
+  - https://unpkg.com/tablesort/dist/tablesort.min.js
+  - javascripts/discord.js
+  - javascripts/tablesort.js
 #   - javascripts/nycta.js
 #   - javascripts/pot.js
-#   - javascripts/tablesort.js
 
 # extra_css:
 #   - stylesheets/extra.css
