--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -89,86 +89,88 @@ nav:
           - "DM/FFA": "pot/rules/dm_and_ffa.md"
 
       - "🥩 Carnivores":
-          - Tier 0:
-              - Compsognathus: pot/carnivores/0/compsognathus.md
-              - Rhamphorhynchus: pot/carnivores/0/rhamphorhynchus.md
-          - Tier 1:
-              - Deinonychus: pot/carnivores/1/deinonychus.md
-              - Latenivenatrix: pot/carnivores/1/latenivenatrix.md
-              - Thalassodromeus: pot/carnivores/1/thalassodromeus.md
-          - Tier 2:
-              - Achillobator: pot/carnivores/2/achillobator.md
-              - Alioramus: pot/carnivores/2/alioramus.md
-              - Carnotaurus: pot/carnivores/2/carnotaurus.md
-              - Ceratosaurus: pot/carnivores/2/ceratosaurus.md
-              - Concavenator: pot/carnivores/2/concavenator.md
-              - Dilophosaurus: pot/carnivores/2/dilophosaurus.md
-              - Eurhinosaurus: pot/carnivores/2/eurhinosaurus.md
-              - Hatzegopteryx: pot/carnivores/2/hatzegopteryx.md
-              - Kaiwhekea: pot/carnivores/2/kaiwhekea.md
-              - Kaprosuchus: pot/carnivores/2/kaprosuchus.md
-              - Kelenken: pot/carnivores/2/kelenken.md
-              - Megalania: pot/carnivores/2/megalania.md
-              - Metriacanthosaurus: pot/carnivores/2/metriacanthosaurus.md
-              - Quetzalcoatlus: pot/carnivores/2/quetzalcoatlus.md
-              - Smilodon: pot/carnivores/2/smilodon.md
-              - Tropeognathus: pot/carnivores/2/tropeognathus.md
-              - Utahraptor: pot/carnivores/2/utahraptor.md
-          - Tier 3:
-              - Allosaurus: pot/carnivores/3/allosaurus.md
-              - Daspletosaurus: pot/carnivores/3/daspletosaurus.md
-              - Dimetrodon: pot/carnivores/3/dimetrodon.md
-              - Dracoviper: pot/carnivores/3/dracoviper.md
-              - Kryptops: pot/carnivores/3/kryptops.md
-              - Maip: pot/carnivores/3/maip.md
-              - Noviana: pot/carnivores/3/noviana.md
-              - Nyctatyrannus: pot/carnivores/3/nyctatyrannus.md
-              - Ocepechelon: pot/carnivores/3/ocepechelon.md
-              - Pachyrhinosaurus: pot/carnivores/3/pachyrhinosaurus.md
-              - Pycnonemosaurus: pot/carnivores/3/pycnonemosaurus.md
-              - Sarcosuchus: pot/carnivores/3/sarcosuchus.md
-              - Suchomimus: pot/carnivores/3/suchomimus.md
-              - Susecdurus: pot/carnivores/3/susecdurus.md
-              - Yutyrannus: pot/carnivores/3/yutyrannus.md
-          - Tier 4:
-              - Acrocanthosaurus: pot/carnivores/4/acrocanthosaurus.md
-              - Deinosuchus: pot/carnivores/4/deinosuchus.md
-              - Giganotosaurus: pot/carnivores/4/giganotosaurus.md
-              - Moraquile: pot/carnivores/4/moraquile.md
-              - Mosasaurus: pot/carnivores/4/mosasaurus.md
-              - Ophis: pot/carnivores/4/ophis.md
-              - Sachicasaurus: pot/carnivores/4/sachicasaurus.md
-              - Spinosaurus: pot/carnivores/4/spinosaurus.md
-              - Tyrannosaurus: pot/carnivores/4/tyrannosaurus.md
+        - Tier 0:
+          - Compsognathus: pot/carnivores/0/compsognathus.md
+          - Rhamphorhynchus: pot/carnivores/0/rhamphorhynchus.md
+        - Tier 1:
+          - Deinonychus: pot/carnivores/1/deinonychus.md
+          - Latenivenatrix: pot/carnivores/1/latenivenatrix.md
+          - Thalassodromeus: pot/carnivores/1/thalassodromeus.md
+        - Tier 2:
+          - Achillobator: pot/carnivores/2/achillobator.md
+          - Alioramus: pot/carnivores/2/alioramus.md
+          - Carnotaurus: pot/carnivores/2/carnotaurus.md
+          - Ceratosaurus: pot/carnivores/2/ceratosaurus.md
+          - Concavenator: pot/carnivores/2/concavenator.md
+          - Dilophosaurus: pot/carnivores/2/dilophosaurus.md
+          - Eurhinosaurus: pot/carnivores/2/eurhinosaurus.md
+          - Hatzegopteryx: pot/carnivores/2/hatzegopteryx.md
+          - Kaiwhekea: pot/carnivores/2/kaiwhekea.md
+          - Kaprosuchus: pot/carnivores/2/kaprosuchus.md
+          - Kelenken: pot/carnivores/2/kelenken.md
+          - Megalania: pot/carnivores/2/megalania.md
+          - Metriacanthosaurus: pot/carnivores/2/metriacanthosaurus.md
+          - Quetzalcoatlus: pot/carnivores/2/quetzalcoatlus.md
+          - Smilodon: pot/carnivores/2/smilodon.md
+          - Tropeognathus: pot/carnivores/2/tropeognathus.md
+          - Utahraptor: pot/carnivores/2/utahraptor.md
+        - Tier 3:
+          - Allosaurus: pot/carnivores/3/allosaurus.md
+          - Daspletosaurus: pot/carnivores/3/daspletosaurus.md
+          - Dimetrodon: pot/carnivores/3/dimetrodon.md
+          - Dracoviper: pot/carnivores/3/dracoviper.md
+          - Kryptops: pot/carnivores/3/kryptops.md
+          - Maip: pot/carnivores/3/maip.md
+          - Noviana: pot/carnivores/3/noviana.md
+          - Nyctatyrannus: pot/carnivores/3/nyctatyrannus.md
+          - Ocepechelon: pot/carnivores/3/ocepechelon.md
+          - Pachyrhinosaurus: pot/carnivores/3/pachyrhinosaurus.md
+          - Pycnonemosaurus: pot/carnivores/3/pycnonemosaurus.md
+          - Sarcosuchus: pot/carnivores/3/sarcosuchus.md
+          - Suchomimus: pot/carnivores/3/suchomimus.md
+          - Susecdurus: pot/carnivores/3/susecdurus.md
+          - Torvosaurus: pot/carnivores/3/torvosaurus.md
+          - Yutyrannus: pot/carnivores/3/yutyrannus.md
+        - Tier 4:
+          - Acrocanthosaurus: pot/carnivores/4/acrocanthosaurus.md
+          - Deinosuchus: pot/carnivores/4/deinosuchus.md
+          - Giganotosaurus: pot/carnivores/4/giganotosaurus.md
+          - Moraquile: pot/carnivores/4/moraquile.md
+          - Mosasaurus: pot/carnivores/4/mosasaurus.md
+          - Ophis: pot/carnivores/4/ophis.md
+          - Sachicasaurus: pot/carnivores/4/sachicasaurus.md
+          - Spinosaurus: pot/carnivores/4/spinosaurus.md
+          - Tyrannosaurus: pot/carnivores/4/tyrannosaurus.md
       - "🌿 Herbivores":
-          - Tier 0:
-              - Dryosaurus: pot/herbivores/0/dryosaurus.md
-          - Tier 1:
-              - Camptosaurus: pot/herbivores/1/camptosaurus.md
-              - Psittacosaurus: pot/herbivores/1/psittacosaurus.md
-              - Struthiomimus: pot/herbivores/1/struthiomimus.md
-          - Tier 2:
-              - Albertaceratops: pot/herbivores/2/albertaceratops.md
-              - Citipati: pot/herbivores/2/citipati.md
-              - Kentrosaurus: pot/herbivores/2/kentrosaurus.md
-              - Lambeosaurus: pot/herbivores/2/lambeosaurus.md
-              - Pachycephalosaurus: pot/herbivores/2/pachycephalosaurus.md
-              - Styracosaurus: pot/herbivores/2/styracosaurus.md
-          - Tier 3:
-              - Amargasaurus: pot/herbivores/3/amargasaurus.md
-              - Anodontosaurus: pot/herbivores/3/anodontosaurus.md
-              - Iguanodon: pot/herbivores/3/iguanodon.md
-              - Miragaia: pot/herbivores/3/miragaia.md
-              - Nasutoceratops: pot/herbivores/3/nasutoceratops.md
-              - Stegosaurus: pot/herbivores/3/stegosaurus.md
-              - Therizinosaurus: pot/herbivores/3/therizinosaurus.md
-              - Yunnanosaurus: pot/herbivores/3/yunnanosaurus.md
-          - Tier 4:
-              - Ampelosaurus: pot/herbivores/4/ampelosaurus.md
-              - Apatosaurus: pot/herbivores/4/apatosaurus.md
-              - Barsboldia: pot/herbivores/4/barsboldia.md
-              - Deinocheirus: pot/herbivores/4/deinocheirus.md
-              - Eotriceratops: pot/herbivores/4/eotriceratops.md
-              - Parasaurolophus: pot/herbivores/4/parasaurolophus.md
-          - Tier 5:
-              - Argentinosaurus: pot/herbivores/5/argentinosaurus.md
+        - Tier 0:
+          - Dryosaurus: pot/herbivores/0/dryosaurus.md
+        - Tier 1:
+          - Camptosaurus: pot/herbivores/1/camptosaurus.md
+          - Psittacosaurus: pot/herbivores/1/psittacosaurus.md
+          - Struthiomimus: pot/herbivores/1/struthiomimus.md
+        - Tier 2:
+          - Albertaceratops: pot/herbivores/2/albertaceratops.md
+          - Citipati: pot/herbivores/2/citipati.md
+          - Kentrosaurus: pot/herbivores/2/kentrosaurus.md
+          - Lambeosaurus: pot/herbivores/2/lambeosaurus.md
+          - Pachycephalosaurus: pot/herbivores/2/pachycephalosaurus.md
+          - Styracosaurus: pot/herbivores/2/styracosaurus.md
+        - Tier 3:
+          - Amargasaurus: pot/herbivores/3/amargasaurus.md
+          - Anodontosaurus: pot/herbivores/3/anodontosaurus.md
+          - Gigantoraptor: pot/herbivores/3/gigantoraptor.md
+          - Iguanodon: pot/herbivores/3/iguanodon.md
+          - Miragaia: pot/herbivores/3/miragaia.md
+          - Nasutoceratops: pot/herbivores/3/nasutoceratops.md
+          - Stegosaurus: pot/herbivores/3/stegosaurus.md
+          - Therizinosaurus: pot/herbivores/3/therizinosaurus.md
+          - Yunnanosaurus: pot/herbivores/3/yunnanosaurus.md
+        - Tier 4:
+          - Ampelosaurus: pot/herbivores/4/ampelosaurus.md
+          - Apatosaurus: pot/herbivores/4/apatosaurus.md
+          - Barsboldia: pot/herbivores/4/barsboldia.md
+          - Deinocheirus: pot/herbivores/4/deinocheirus.md
+          - Eotriceratops: pot/herbivores/4/eotriceratops.md
+          - Parasaurolophus: pot/herbivores/4/parasaurolophus.md
+        - Tier 5:
+          - Argentinosaurus: pot/herbivores/5/argentinosaurus.md
