--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
           python generate_dinosaurs.py
           python generate_dinosaurs_schema.py
           python generate_markdown_pages.py
+          python generate_tiers_page.py
         # TODO: Remove once troubleshooting is complete.
         # continue-on-error: true
 
