--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -141,6 +141,7 @@ nav:
           - Sachicasaurus: pot/carnivores/4/sachicasaurus.md
           - Spinosaurus: pot/carnivores/4/spinosaurus.md
           - Tyrannosaurus: pot/carnivores/4/tyrannosaurus.md
+          - Tyrannotitan: pot/carnivores/4/tyrannotitan.md
         - Tier 5:
           - Livyatan: pot/carnivores/5/livyatan.md
       - "🌿 Herbivores":
@@ -164,6 +165,7 @@ nav:
           - Anodontosaurus: pot/herbivores/3/anodontosaurus.md
           - Gigantoraptor: pot/herbivores/3/gigantoraptor.md
           - Iguanodon: pot/herbivores/3/iguanodon.md
+          - Lisowicia: pot/herbivores/3/lisowicia.md
           - Miragaia: pot/herbivores/3/miragaia.md
           - Nasutoceratops: pot/herbivores/3/nasutoceratops.md
           - Stegosaurus: pot/herbivores/3/stegosaurus.md
